--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <title>adventure game</title>
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
   </head>
@@ -11,16 +10,17 @@
     <main>
     <h1>adventure game</h1>
     <h2 id="title"></h2>
-    <img id="image" height="350px">
     <p id="text"></p>
     <p id="extraText"></p>
     </main>
-
     <footer>
-      <ul id="options">
-      </ul>
+      <section id="boximage">
+        <img id="image">
+      </section>
+      <section>
+        <ul id="options"></ul>
+      </section>
     </footer>
-
     <script type="text/javascript" src="js/game.js"></script>
   </body>
 </html>
